--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         }
         body {
             line-height: 1.2;
-            background-color: var(--background)
+            background-color: var(--background);
         }
         ol, ul {
             list-style: none;
@@ -107,6 +107,11 @@
             font-size: 1rem;
             color: var(--text)
         }
+        * {
+            transition-property: fill, opacity;
+            transition-duration: 200ms;
+            transition-timing-function: ease;
+        }
         /* END RESET */
 
         /* Site Specific */
@@ -150,6 +155,12 @@
             width: 3rem;
             padding: .5rem;
             /* filter: drop-shadow(var(--text) .2em .2em 0); */
+            @media (prefers-color-scheme: dark) {
+                fill:var(--text);
+            }
+            &:hover, &:focus {
+                opacity:.8;
+            }
         }
         @media (min-width:640px) {
             main {
@@ -166,15 +177,6 @@
 </head>
 
 <body>
-    <!-- <header>
-        <h1>I'm JWes</h1>
-        <h2>I'm JWes</h2>
-        <h3>I'm JWes</h3>
-        <h4>I'm JWes</h4>
-        <h5>I'm JWes</h5>
-        <p>I'm Wes Campbell</p>
-        <h6>I'm JWes</h6>
-    </header> -->
     <div class="overlay">
     <main>
         <section class="left">
